deployments/base/cloudnative-pg/networkpolicies/networkpolicies.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cloudnative-pg
  namespace: cloudnative-pg
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: cloudnative-pg
  ingress:
  # Webhook
  - fromEntities:
    - remote-node
  # Prometheus
  - fromEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": prometheus
        app.kubernetes.io/name: prometheus
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
  egress:
  # Kubernetes API
  - toEntities:
    - kube-apiserver
  # Postgresses
  - toPorts:
    - ports:
      - port: "8000"
        protocol: TCP
